--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,16 +1,16 @@
 <div class="container">
     <ul>
         <li>
-            <a routerLink="/home" routerLinkActive="active">Home</a>
+            <a routerLink="/" routerLinkActive="active">Home</a>
         </li>
         <li>
-            <a routerLink="/movies" routerLinkActive="active">Movies</a>
+            <a routerLink="/content" routerLinkActive="active">Movies</a>
         </li>
         <li>
-            <a routerLink="/books" routerLinkActive="active">Books</a>
+            <a routerLink="/content" routerLinkActive="active">Books</a>
         </li>
         <li>
-            <a routerLink="/about" routerLinkActive="active">About</a>
+            <a routerLink="/content" routerLinkActive="active">About</a>
         </li>
         <li>
             <a routerLink="/contact" routerLinkActive="active">Contact</a>
